Add model to swagger documentation
